Quorum/Library/Tests/Inheritance/Pass/ParentCallingBlueprint.quorum
class Parent 
    action Breaker
        Test()
    end

    public blueprint action Test
end