Quorum/Library/Tests/Inheritance/Fail/ForgotBlueprintParent.quorum
class ForgotBlueprintParent 
    blueprint action Test
    blueprint action Dog
    blueprint action Fish
end